--- a/reports/q2-2020.md
+++ b/reports/q2-2020.md
@@ -5,7 +5,7 @@ This documents covers an overview of what happened for the brigade over April, M
 * All events are online
 * Audited projects
 * Initiated contact with Downtown Development Board's design agency, League of Women Voters OC, Black Orlando Tech, Techqueria and AIGA Orlando
-* Collaborated with City of Orlando and Orlando Lady Devs
+* Collaborated with City of Orlando
 * Launched a new event series
 * Kicked off new CFO website project
 
@@ -21,7 +21,8 @@ This documents covers an overview of what happened for the brigade over April, M
 ## What didn't work so well :thinking_face::
 * No response to follow up email from design agency 
 * Lack of follow up from city & brigade post-brainstorm session
-* CFO website launched delayed
+* Ambiguous focus
+* CFO website launch delayed
 
 ## Next Steps
 * Get rest, stay safe and well
