--- a/reports/q2-2020.md
+++ b/reports/q2-2020.md
@@ -9,7 +9,7 @@ This documents covers an overview of what happened for the brigade over April, M
 * Launched a new event series
 * Kicked off new CFO website project
 
-## What went well :stars::rainbow::
+## What went well :stars::rainbow:
 * Saved money on food & swag
 * Provided technical consulting to government entities
 * Selected 1 official brigade project (Stay Safe Orlando)
@@ -18,7 +18,7 @@ This documents covers an overview of what happened for the brigade over April, M
 * Recruited 2 new captains
 * Received 2 pitches for project ideas from brigade members
 
-## What didn't work so well :thinking_face::
+## What didn't work so well
 * No response to follow up email from design agency 
 * Lack of follow up from city & brigade post-brainstorm session
 * Ambiguous focus
